--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,8 +17,11 @@ jobs:
       - name: Set up QEMU (for multi-arch)
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Create and use multiarch builder
+        run: |
+          docker buildx create --use --name multiarch-builder || true
+          docker buildx use multiarch-builder
+          docker buildx inspect --bootstrap
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -27,9 +30,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push multi-arch image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: numenproject/n8n-puppeteer:latest
-          platforms: linux/amd64,linux/arm64
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64 -t numenproject/n8n-puppeteer:latest --push .
